[package]
name = "unrar"
version = "0.4.4"
authors = [
  "Danyel Bayraktar <rust@danyel.io>",
  "vjoki <vjoki@zv.fi>",
]

license = "MIT"
description = "list and extract RAR archives"
repository = "https://github.com/muja/unrar.rs"

[dependencies]
regex = "1"
lazy_static = "1"
bitflags = "1"
widestring = "0.4"
num_enum = "0.6.1"

[dependencies.unrar_sys]
path = "unrar_sys"
version = "0.2"

[dev-dependencies]
tempdir = "0.3"
