[package]
name = "unrar"
version = "0.5.3"
authors = [
  "Danyel Bayraktar <rust@danyel.io>",
  "vjoki <vjoki@zv.fi>",
]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "list and extract RAR archives"
repository = "https://github.com/muja/unrar.rs"

[dependencies]
regex = "1"
bitflags = "1"
widestring = "1"
tempfile = "3.10.1"

[dependencies.unrar_sys]
path = "unrar_sys"
version = "0.3"
