[package]
name = "unrar_sys"
version = "0.2.0"
authors = ["Danyel Bayraktar <danyel@webhippie.de>"]

build = "build.rs"
license = "MIT"
description = "FFI bindings to unrar (with minimal abstractions)"
repository = "https://github.com/muja/unrar.rs"

[dependencies]
libc = "0.1"

[build-dependencies]
gcc = "0.3"
