[package]
name = "unrar_sys"
version = "0.2.0"
authors = ["Danyel Bayraktar <rust@danyel.io>"]

build = "build.rs"
license = "MIT"
description = "FFI bindings to unrar (with minimal abstractions)"
repository = "https://github.com/muja/unrar.rs"

[features]
default = ["std"]
std = ["libc/std", "winapi/std"]

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cc = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "ntdef"] }
